# chore-rs

./: Cargo.toml  README.md  test.sh
public/: index.html  index.js
src/: generation.rs  lib.rs  main.rs  serve.rs
