[package]
name = "chores-rs"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[[bin]]
name = "chores"
path = "src/main.rs"

[dependencies]
shuttle-service = { version = "0.7.2", features = ["web-warp"] }
warp = "0.3.3"
tokio = { version = "1.13.0", features = ["full"] }
icalendar = "0.13"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }